[gd_scene load_steps=2 format=3 uid="uid://cxxrbremgngb7"]

[ext_resource type="Script" path="res://scenes/components/hitboxcomponent.gd" id="1_pdb87"]

[node name="HitBoxComponent" type="Area2D"]
script = ExtResource("1_pdb87")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
